Fixing bug, where the feature image was too big on iOS.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -79,7 +79,6 @@ html, body {
 
     // First Layer Background / fixed image in Text Love / Test it!!!
 
-    background-attachment: fixed;
 	background-image: image('/images/main-bg.jpg');
 	background-size: cover;
 	background-position: center center;
